@@ -73,5 +73,50 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<scope>compile</scope>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
+	<build>
+		<pluginManagement>
+			<plugins>
+			    <plugin>
+			        <groupId>org.apache.maven.plugins</groupId>
+			        <artifactId>maven-surefire-plugin</artifactId>
+			        <configuration>
+			            <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m
+			                -Dfile.encoding=UTF-8
+			            </argLine>
+			            <forkMode>always</forkMode>
+			            <useFile>false</useFile>
+			            <includes>
+			                <include>**/*Tests.java</include>
+			            </includes>
+			            <excludes>
+			                <exclude>**/Abstract*.java</exclude>
+			            </excludes>
+			            <junitArtifactName>junit:junit</junitArtifactName>
+			        </configuration>
+			    </plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+	<distributionManagement>
+		<repository>
+			<id>release</id>
+			<name>Nexus Release Repository</name>
+			<url>http://192.168.0.245:8088/nexus/content/repositories/hurelease</url>
+			<layout>default</layout>
+		</repository>
+
+		<snapshotRepository>
+			<id>snapshot</id>
+			<name>Nexus Snapshot Repository</name>
+			<url>http://192.168.0.245:8088/nexus/content/repositories/husnapshot</url>
+			<layout>default</layout>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
